--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
 body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; }
 header { background:#262e87; color:white; padding:10px; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; position:sticky; top:0; z-index:1001; }
 #hamburgerBtn { font-size:24px; cursor:pointer; margin-right:10px; }
-#sidebar { width:270px; background:#3a2b7c; color:white; position:fixed; top:0; left:-280px; height:100%; overflow:auto; transition:0.3s; padding:10px; z-index:1002; }
+#sidebar { width:280px; background:#3a2b7c; color:white; position:fixed; top:0; left:-300px; height:100%; overflow:auto; transition:0.3s; padding:10px; z-index:1002; }
 #sidebar.open { left:0; }
 #overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); display:none; z-index:1001; }
 button { cursor:pointer; margin:2px; padding:4px 8px; border:none; border-radius:4px; background:#f04e23; color:white; }
 table { width:100%; border-collapse:collapse; margin-top:10px; }
 th, td { border:1px solid #333; padding:6px; text-align:center; font-size:0.9em; }
-th { background:#f7931e; color:white; }
-input[type=time], input[type=text], input[type=date], #filterInput { width:90%; padding:4px; margin:2px 0; }
+th { background:#f7931e; color:white; position:sticky; top:0; z-index:10; }
+input[type=time], input[type=text], input[type=date], select, #filterInput { width:90%; padding:4px; margin:2px 0; }
 #savedDatesList li { list-style:none; background:#f04e23; color:white; padding:4px; margin:2px 0; border-radius:3px; cursor:pointer; font-size:0.9em; }
 #savedDatesList li:hover { background:#f7931e; }
-#shareLink { margin-top:10px; display:block; color:white; background:#f7931e; padding:6px; text-align:center; border-radius:5px; text-decoration:none; }
 .employee-item { display:flex; align-items:center; justify-content:flex-start; padding:2px 4px; margin:2px 0; background:#f7931e; border-radius:4px; color:white; font-size:0.9em; }
 .employee-item button { margin-right:5px; background:red; color:white; border:none; border-radius:3px; cursor:pointer; }
 #overtimeSummary { margin-top:10px; font-weight:bold; color:#262e87; }
+#summaryPage { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:2000; justify-content:center; align-items:center; }
+#summaryContentWrapper { background:white; padding:20px; border-radius:10px; max-width:500px; width:90%; max-height:90%; overflow:auto; box-shadow:0 0 10px rgba(0,0,0,0.5); }
+#summaryContent p { margin:5px 0; font-size:1em; }
+#summaryContent h3 { margin-top:15px; margin-bottom:5px; }
+#shareImageBtn { margin-top:10px; }
 @media(max-width:600px){
   table, th, td, input { font-size:0.8em; }
   header { flex-direction: column; align-items:flex-start; }
-  #sidebar { width:220px; }
+  #sidebar { width:240px; }
 }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
 
@@ -38,7 +43,7 @@ input[type=time], input[type=text], input[type=date], #filterInput { width:90%; 
     <input type="date" id="workDate">
     <button id="saveBtn">Save Data</button>
     <button id="exportCSVBtn">Export CSV</button>
-    <a id="shareLink" href="#" target="_blank">View Shareable Link</a>
+    <button id="teamCountBtn">Team Count</button>
     <input type="date" id="exportFrom" title="From Date">
     <input type="date" id="exportTo" title="To Date">
     <input type="text" id="filterInput" placeholder="Filter Employee Name">
@@ -53,11 +58,24 @@ input[type=time], input[type=text], input[type=date], #filterInput { width:90%; 
   <div id="employeeMenu"></div>
   <h4>Saved Dates</h4>
   <ul id="savedDatesList"></ul>
+  <h4>Master Employee List</h4>
+  <ul id="masterList"></ul>
+  <button onclick="addToMasterList()">➕ Add to Master Employee List</button>
 </div>
 
 <main style="margin-left:10px; padding:10px;">
   <table id="employeeTable"></table>
 </main>
+
+<!-- Team Count Modal -->
+<div id="summaryPage" style="display:flex;">
+  <div id="summaryContentWrapper">
+    <h2>Team Count Summary</h2>
+    <div id="summaryContent"></div>
+    <button id="shareImageBtn">📤 Share as Image</button>
+    <button onclick="document.getElementById('summaryPage').style.display='none'" style="margin-left:5px;">Close</button>
+  </div>
+</div>
 
 <script>
 // ==========================
@@ -66,27 +84,23 @@ let teams = JSON.parse(localStorage.getItem("teams")) || [
   { name: "Team 1", site:"Site A", siteIn:"", siteOut:"", employees: [] },
   { name: "Team 2", site:"Site B", siteIn:"", siteOut:"", employees: [] },
   { name: "Team 3", site:"Site C", siteIn:"", siteOut:"", employees: [] },
-  { name: "Team 4", site:"Site D", siteIn:"", siteOut:"", employees: [] }
+  { name: "Team 4", site:"Site D", siteIn:"", siteOut:"", employees: [] },
+  { name: "OFF", site:"OFF", siteIn:"", siteOut:"", employees: [] }
 ];
 let allData = JSON.parse(localStorage.getItem("allData")) || {};
+let masterEmployees = JSON.parse(localStorage.getItem("masterEmployees")) || [];
 let selectedDate = new Date().toISOString().split("T")[0];
 const publicHolidays = ["2025-01-01","2025-03-30","2025-03-31","2025-04-01","2025-04-02","2025-06-05","2025-06-06","2025-06-07","2025-06-08","2025-06-27","2025-09-05","2025-12-02","2025-12-03","2025-12-30","2025-12-31"];
 function saveTeams(){ localStorage.setItem("teams", JSON.stringify(teams)); }
 function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData)); }
+function saveMaster(){ localStorage.setItem("masterEmployees", JSON.stringify(masterEmployees)); }
 
 // ==========================
 // Date Picker
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 const filterInput = document.getElementById("filterInput");
-dateInput.addEventListener("change", ()=>{
-  selectedDate=dateInput.value;
-  buildEmployeeTable(filterInput.value.trim().toLowerCase());
-  updateShareLink();
-});
-const urlParams = new URLSearchParams(window.location.search);
-const dateParam = urlParams.get("date");
-if(dateParam){ selectedDate = dateParam; dateInput.value=selectedDate; }
+dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
 // ==========================
 // Sidebar
@@ -97,100 +111,107 @@ hamburgerBtn.addEventListener("click", ()=>{ sidebar.classList.add("open"); over
 overlay.addEventListener("click", ()=>{ sidebar.classList.remove("open"); overlay.style.display="none"; });
 
 // ==========================
-// Build Menu
+// Build Hamburger Menu
 function buildHamburgerMenu(){
   const menu=document.getElementById("employeeMenu"); menu.innerHTML="";
   teams.forEach(team=>{
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
-
-    // Site Name + In/Out + Apply Button
-    const siteInput=document.createElement("input"); siteInput.type="text"; siteInput.value=team.site; siteInput.placeholder="Site Name";
-    const siteInInput=document.createElement("input"); siteInInput.type="time"; siteInInput.value=team.siteIn;
-    const siteOutInput=document.createElement("input"); siteOutInput.type="time"; siteOutInput.value=team.siteOut;
-    const applyBtn=document.createElement("button"); applyBtn.textContent="Apply to Team"; applyBtn.onclick=()=>{
-      team.site=siteInput.value; team.siteIn=siteInInput.value; team.siteOut=siteOutInput.value;
-      if(!allData[selectedDate]) allData[selectedDate]={};
-      team.employees.forEach(emp=>{
-        if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-        allData[selectedDate][emp.id].site=team.site;
-        allData[selectedDate][emp.id].in=team.siteIn;
-        allData[selectedDate][emp.id].out=team.siteOut;
-      });
-      saveAllData(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); saveTeams(); alert("✅ Applied to all team members");
-    };
-    const wrap=document.createElement("div"); wrap.innerHTML="<small>Default Site / In / Out:</small><br>";
-    wrap.appendChild(siteInput); wrap.appendChild(siteInInput); wrap.appendChild(siteOutInput); wrap.appendChild(applyBtn);
-    teamDiv.appendChild(wrap);
-
+    if(team.name!=="OFF"){
+      const siteInput=document.createElement("input"); siteInput.type="text"; siteInput.value=team.site; siteInput.placeholder="Site Name";
+      const siteInInput=document.createElement("input"); siteInInput.type="time"; siteInInput.value=team.siteIn;
+      const siteOutInput=document.createElement("input"); siteOutInput.type="time"; siteOutInput.value=team.siteOut;
+      const applyBtn=document.createElement("button"); applyBtn.textContent="Apply to Team"; applyBtn.onclick=()=>{
+        team.site=siteInput.value; team.siteIn=siteInInput.value; team.siteOut=siteOutInput.value;
+        if(!allData[selectedDate]) allData[selectedDate]={};
+        team.employees.forEach(emp=>{
+          if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+          allData[selectedDate][emp.id].site=team.site;
+          allData[selectedDate][emp.id].in=team.siteIn;
+          allData[selectedDate][emp.id].out=team.siteOut;
+        });
+        saveAllData(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); saveTeams(); alert("✅ Applied to all team members");
+      };
+      const wrap=document.createElement("div"); wrap.innerHTML="<small>Default Site / In / Out:</small><br>";
+      wrap.appendChild(siteInput); wrap.appendChild(siteInInput); wrap.appendChild(siteOutInput); wrap.appendChild(applyBtn);
+      teamDiv.appendChild(wrap);
+    }
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
       const delBtn=document.createElement("button"); delBtn.textContent="❌";
-
-      function deleteEmployee(){ 
-        team.employees = team.employees.filter(e=>e.id!==emp.id);
-        saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
-      }
-      delBtn.addEventListener("click", (e)=>{ e.stopPropagation(); e.preventDefault(); deleteEmployee(); });
-      delBtn.addEventListener("touchend", (e)=>{ e.stopPropagation(); e.preventDefault(); deleteEmployee(); });
-
+      function deleteEmployee(){ team.employees = team.employees.filter(e=>e.id!==emp.id); saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); }
+      delBtn.addEventListener("click", (e)=>{ e.stopPropagation(); deleteEmployee(); });
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+" ("+emp.site+")"));
-      li.dataset.empId = emp.id;
-      ul.appendChild(li);
+      li.dataset.empId = emp.id; ul.appendChild(li);
     });
-    const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>addEmployee(team.name);
-    teamDiv.appendChild(ul); teamDiv.appendChild(addBtn); menu.appendChild(teamDiv);
+    // Add employee dropdown
+    if(masterEmployees.length>0 && team.name!=="OFF"){
+      const sel = document.createElement("select");
+      const defaultOpt = document.createElement("option"); defaultOpt.text="Select Employee"; defaultOpt.value="";
+      sel.appendChild(defaultOpt);
+      masterEmployees.forEach(name=>{
+        const opt = document.createElement("option"); opt.value=name; opt.text=name; sel.appendChild(opt);
+      });
+      const addBtn=document.createElement("button"); addBtn.textContent="➕ Add Employee"; addBtn.onclick=()=>{
+        if(!sel.value) return;
+        const employee={id:Date.now(), name:sel.value, site:team.site, team:team.name};
+        team.employees.push(employee);
+        buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); saveTeams();
+      };
+      teamDiv.appendChild(sel); teamDiv.appendChild(addBtn);
+    }
+    menu.appendChild(teamDiv);
 
-    // Drag & drop using SortableJS with mobile improvements
-    new Sortable(ul, {
-      group:'employees',
-      animation:150,
-      delay:150,
-      delayOnTouchOnly:true,
-      onEnd: evt=>{
-        const empId=evt.item.dataset.empId;
-        const newTeamName=evt.to.dataset.team;
-        moveEmployeeToTeam(empId,newTeamName);
-      }
-    });
+    // Drag & drop
+    new Sortable(ul, { group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
+      const empId=evt.item.dataset.empId;
+      const newTeamName=evt.to.dataset.team;
+      moveEmployeeToTeam(empId,newTeamName);
+    }});
   });
+  buildMasterList();
 }
 
 // ==========================
-// Add Employee
-function addEmployee(teamName){
-  const name=prompt("Enter employee name:"); if(!name) return;
-  const site=prompt("Enter site name:")||"";
-  const employee={id:Date.now(), name, site, team:teamName};
-  const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
-  saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
+// Build Master Employee List
+function buildMasterList(){
+  const masterList=document.getElementById("masterList");
+  masterList.innerHTML="";
+  masterEmployees.forEach(name=>{
+    const li=document.createElement("li"); li.textContent=name;
+    const delBtn=document.createElement("button"); delBtn.textContent="❌"; delBtn.onclick=()=>{ masterEmployees=masterEmployees.filter(n=>n!==name); saveMaster(); buildHamburgerMenu(); };
+    li.prepend(delBtn); masterList.appendChild(li);
+  });
+}
+function addToMasterList(){
+  const name=prompt("Enter employee name to master list:"); if(!name) return;
+  if(!masterEmployees.includes(name)){ masterEmployees.push(name); saveMaster(); buildHamburgerMenu(); }
 }
 
 // ==========================
 // Move Employee
 function moveEmployeeToTeam(empId,newTeamName){
   let emp, oldTeam;
-  teams.forEach(team=>{ team.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=team; } }); });
+  teams.forEach(team=>team.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=team; } }));
   if(emp && emp.team!==newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
     const newTeam = teams.find(t=>t.name===newTeamName);
     emp.team=newTeamName; newTeam.employees.push(emp);
-    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); updateShareLink();
+    saveTeams(); buildHamburgerMenu(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
   }
 }
 
 // ==========================
-// Table & Filter with Overtime
+// Table & Overtime
 const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
-
 function buildEmployeeTable(filterText=""){
   const table=document.getElementById("employeeTable");
   table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
   if(!allData[selectedDate]) allData[selectedDate]={};
   let totalOvertime=0;
-  teams.forEach(team=>team.employees.forEach(emp=>{
+  teams.filter(t=>t.name!=="OFF").forEach(team=>team.employees.forEach(emp=>{
     if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
     const row=table.insertRow();
     row.insertCell(0).textContent=emp.name;
@@ -217,7 +238,6 @@ function buildEmployeeTable(filterText=""){
   }));
   updateOvertimeSummary();
 }
-
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
   const inTime=inInput.value, outTime=outInput.value;
   if(!inTime||!outTime){ totalCell.textContent="❌"; overtimeCell.textContent="❌"; totalCell.style.background="red"; overtimeCell.style.background="red"; return [0,0]; }
@@ -229,7 +249,6 @@ function calculateHours(inInput,outInput,totalCell,overtimeCell){
   overtimeCell.textContent=overtime.toFixed(2);
   return [diff,overtime];
 }
-
 function updateOvertimeSummary(){ 
   let totalOT=0; 
   const table=document.getElementById("employeeTable"); 
@@ -271,34 +290,47 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 });
 
 // ==========================
-// Google Sheet Summary Push
-async function pushSummaryToGoogleSheet(){
-  let site="", teamCount=0;
-  teams.forEach(team=>{ if(team.employees.length>0){ teamCount+=team.employees.length; team.employees.forEach(emp=>{ if(!site && emp.site) site=emp.site; }); }});
-  const payload={date:selectedDate, site: site||"N/A", teamCount: teamCount};
-  const webAppURL="YOUR_WEB_APP_URL"; 
-  try{
-    const res=await fetch(webAppURL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
-    const result=await res.json();
-    if(result.status==="success") alert("✅ Summary uploaded to Google Sheet");
-    else alert("⚠️ Failed to upload summary");
-  } catch(err){ alert("⚠️ Network error: "+err.message); }
-}
-
-// ==========================
-// Shareable Link
-const shareLink=document.getElementById("shareLink");
-function updateShareLink(){ const params=new URLSearchParams(); params.set("date", selectedDate); shareLink.href=window.location.origin+window.location.pathname+"?"+params.toString(); shareLink.textContent="View Shareable Link"; }
-
-// ==========================
 // Save Button
-document.getElementById("saveBtn").addEventListener("click", ()=>{ saveAllData(); updateSavedDatesList(); pushSummaryToGoogleSheet(); alert("✅ Data saved!"); });
+document.getElementById("saveBtn").addEventListener("click", ()=>{ saveAllData(); updateSavedDatesList(); alert("✅ Data saved!"); });
+
+// ==========================
+// Team Count Button
+document.getElementById("teamCountBtn").addEventListener("click", ()=>{
+  let siteName="", count=0, offEmployees=[];
+  teams.forEach(team=>{
+    if(team.name!=="OFF"){
+      if(team.employees.length>0 && !siteName){
+        const emp=team.employees[0];
+        const data=allData[selectedDate]?.[emp.id];
+        siteName = (data?.site||emp.site||"N/A");
+      }
+      count+=team.employees.length;
+    } else {
+      offEmployees = team.employees.map(e=>e.name);
+    }
+  });
+  const content=document.getElementById("summaryContent");
+  content.innerHTML=`<p><b>Date:</b> ${selectedDate}</p>
+                     <p><b>Site Name:</b> ${siteName||"N/A"}</p>
+                     <p><b>Total Team Members:</b> ${count}</p>
+                     <p><b>OFF Employees:</b> ${offEmployees.join(", ") || "None"}</p>`;
+  document.getElementById('summaryPage').style.display='flex';
+});
+
+// ==========================
+// Share as Image
+document.getElementById("shareImageBtn").addEventListener("click", ()=>{
+  html2canvas(document.getElementById("summaryContentWrapper")).then(canvas=>{
+    canvas.toBlob(function(blob){
+      const url = URL.createObjectURL(blob);
+      window.open("https://api.whatsapp.com/send?text=" + encodeURIComponent("Team Summary: See attached image") + "&media=" + encodeURIComponent(url));
+    });
+  });
+});
 
 // ==========================
 // Initialize
-buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList(); updateShareLink();
-
+buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList();
 </script>
-
 </body>
 </html>
