--- a/index.html
+++ b/index.html
@@ -74,13 +74,14 @@ input[type=time], input[type=text], input[type=date], select, #filterInput { wid
 <script>
 // ==========================
 // Global Data
-let teams = JSON.parse(localStorage.getItem("teams")) || [
-  { name:"Team 1", site:"", siteIn:"", siteOut:"", employees:[] },
-  { name:"Team 2", site:"", siteIn:"", siteOut:"", employees:[] },
-  { name:"Team 3", site:"", siteIn:"", siteOut:"", employees:[] },
-  { name:"Team 4", site:"", siteIn:"", siteOut:"", employees:[] },
-  { name:"OFF", site:"", siteIn:"", siteOut:"", employees:[] }
+let teamTemplate = [
+  { name:"Team 1" },
+  { name:"Team 2" },
+  { name:"Team 3" },
+  { name:"Team 4" },
+  { name:"OFF" }
 ];
+
 let masterEmployees = JSON.parse(localStorage.getItem("masterEmployees")) || [];
 let masterSites = JSON.parse(localStorage.getItem("masterSites")) || [];
 let allData = JSON.parse(localStorage.getItem("allData")) || {};
@@ -91,7 +92,12 @@ let selectedDate = new Date().toISOString().split("T")[0];
 const dateInput = document.getElementById("workDate");
 dateInput.value = selectedDate;
 const filterInput = document.getElementById("filterInput");
-dateInput.addEventListener("change", ()=>{ selectedDate=dateInput.value; buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
+dateInput.addEventListener("change", ()=>{
+  selectedDate=dateInput.value; 
+  initDateData();
+  buildTeamsContent(); 
+  buildEmployeeTable(filterInput.value.trim().toLowerCase());
+});
 
 // ==========================
 // Sidebar open/close
@@ -111,15 +117,24 @@ document.addEventListener("click", e=>{
 });
 
 // ==========================
+// Initialize or Load Date Data
+function initDateData(){
+  if(!allData[selectedDate]){
+    allData[selectedDate] = {
+      teams: JSON.parse(JSON.stringify(teamTemplate)),
+      employees: {}
+    };
+  }
+}
+
+// ==========================
 // Clear Data
 document.getElementById("clearDataBtn").addEventListener("click", ()=>{
   if(confirm("Clear all data for this date?")){
-    allData[selectedDate]={};
-    teams.forEach(team=>team.employees=[]);
+    allData[selectedDate] = { teams: JSON.parse(JSON.stringify(teamTemplate)), employees:{} };
     buildTeamsContent();
     buildEmployeeTable();
     localStorage.setItem("allData", JSON.stringify(allData));
-    localStorage.setItem("teams", JSON.stringify(teams));
     alert("✅ Data cleared for "+selectedDate);
   }
 });
@@ -167,7 +182,9 @@ buildMasterSiteList();
 function buildTeamsContent(){
   const menu=document.getElementById("teamsContent");
   menu.innerHTML="";
+  const teams = allData[selectedDate].teams;
   teams.forEach(team=>{
+    if(team.name!=="OFF" && (!team.employees || team.employees.length===0)) team.employees=[];
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
@@ -180,21 +197,16 @@ function buildTeamsContent(){
         if(siteName===team.site) option.selected = true;
         siteSelect.appendChild(option);
       });
-
-      const siteInInput = document.createElement("input"); siteInInput.type="time"; siteInInput.value=team.siteIn;
-      const siteOutInput = document.createElement("input"); siteOutInput.type="time"; siteOutInput.value=team.siteOut;
+      const siteInInput = document.createElement("input"); siteInInput.type="time"; siteInInput.value=team.siteIn||"";
+      const siteOutInput = document.createElement("input"); siteOutInput.type="time"; siteOutInput.value=team.siteOut||"";
 
       const applyBtn=document.createElement("button"); applyBtn.textContent="Apply to Team";
       applyBtn.onclick=()=>{
         team.site = siteSelect.value;
         team.siteIn = siteInInput.value;
         team.siteOut = siteOutInput.value;
-        if(!allData[selectedDate]) allData[selectedDate]={};
         team.employees.forEach(emp=>{
-          if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-          allData[selectedDate][emp.id].site=team.site;
-          allData[selectedDate][emp.id].in=team.siteIn;
-          allData[selectedDate][emp.id].out=team.siteOut;
+          allData[selectedDate].employees[emp.id] = { ...allData[selectedDate].employees[emp.id], site:team.site, in:team.siteIn, out:team.siteOut };
         });
         localStorage.setItem("allData", JSON.stringify(allData));
         buildEmployeeTable(filterInput.value.trim().toLowerCase());
@@ -209,19 +221,19 @@ function buildTeamsContent(){
 
     // Employee list
     const ul=document.createElement("ul"); ul.dataset.team=team.name;
-    if(allData[selectedDate]){
-      team.employees = team.employees.map(emp=>{
-        if(allData[selectedDate][emp.id]){
-          return {...emp,...allData[selectedDate][emp.id]};
-        }
-        return emp;
-      });
-    }
+    team.employees = team.employees.map(emp=>{
+      const saved=allData[selectedDate].employees[emp.id]||{};
+      return {...emp,...saved};
+    });
 
     team.employees.forEach(emp=>{
       const li=document.createElement("li"); li.className="employee-item";
       const delBtn=document.createElement("button"); delBtn.textContent="❌";
-      delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
+      delBtn.onclick=()=>{
+        team.employees = team.employees.filter(e=>e.id!==emp.id);
+        delete allData[selectedDate].employees[emp.id];
+        buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
+      };
       li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name+(team.name!=="OFF"?` (${emp.site||team.site})`:"")));
       li.dataset.empId = emp.id;
       ul.appendChild(li);
@@ -229,124 +241,98 @@ function buildTeamsContent(){
 
     // Employee dropdown
     const addSelect = document.createElement("select");
-    const defaultOption = document.createElement("option");
-    defaultOption.value = "";
-    defaultOption.textContent = "Select Employee";
-    addSelect.appendChild(defaultOption);
-
-    masterEmployees.forEach(empName => {
-        const option = document.createElement("option");
-        option.value = empName;
-        option.textContent = empName;
-        addSelect.appendChild(option);
-    });
-
-    const addBtn = document.createElement("button");
-    addBtn.textContent = "➕ Add Employee";
+    const defaultOption = document.createElement("option"); defaultOption.value = ""; defaultOption.textContent = "Select Employee"; addSelect.appendChild(defaultOption);
+    masterEmployees.forEach(empName => { const option = document.createElement("option"); option.value = empName; option.textContent = empName; addSelect.appendChild(option); });
+    const addBtn = document.createElement("button"); addBtn.textContent = "➕ Add Employee";
     addBtn.onclick = () => {
-        const selectedEmp = addSelect.value;
-        if (!selectedEmp) return;
-        if (team.employees.some(e => e.name === selectedEmp)) {
-            alert("Employee already in this team");
-            return;
-        }
-        const emp = { id: Date.now(), name: selectedEmp, team: team.name, site: "" };
-        team.employees.push(emp);
-        localStorage.setItem("teams", JSON.stringify(teams));
-        buildTeamsContent();
-        buildEmployeeTable(filterInput.value.trim().toLowerCase());
+      const selectedEmp = addSelect.value; if(!selectedEmp) return;
+      if(team.employees.some(e=>e.name===selectedEmp)){ alert("Employee already in this team"); return; }
+      const emp = { id: Date.now(), name: selectedEmp, team: team.name, site:"" };
+      team.employees.push(emp);
+      allData[selectedDate].employees[emp.id] = { ...emp };
+      localStorage.setItem("allData", JSON.stringify(allData));
+      buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
     };
-
-    teamDiv.appendChild(addSelect);
-    teamDiv.appendChild(addBtn);
+    teamDiv.appendChild(addSelect); teamDiv.appendChild(addBtn);
 
     new Sortable(ul,{group:'employees', animation:150, delay:150, delayOnTouchOnly:true, onEnd: evt=>{
-      const empId=evt.item.dataset.empId;
-      const newTeamName=evt.to.dataset.team;
+      const empId=evt.item.dataset.empId; const newTeamName=evt.to.dataset.team;
       moveEmployeeToTeam(empId,newTeamName);
     }});
-
-    teamDiv.appendChild(ul);
-    menu.appendChild(teamDiv);
+    teamDiv.appendChild(ul); menu.appendChild(teamDiv);
   });
 }
 
 // Move employee between teams
 function moveEmployeeToTeam(empId,newTeamName){
+  const teams = allData[selectedDate].teams;
   let emp, oldTeam;
   teams.forEach(team=>team.employees.forEach(e=>{ if(e.id==empId){ emp=e; oldTeam=team; } }));
   if(emp && emp.team!==newTeamName){
     oldTeam.employees = oldTeam.employees.filter(e=>e.id!==empId);
     const newTeam = teams.find(t=>t.name===newTeamName);
     emp.team=newTeamName; newTeam.employees.push(emp);
-    localStorage.setItem("teams", JSON.stringify(teams));
-    buildTeamsContent();
-    buildEmployeeTable(filterInput.value.trim().toLowerCase());
+    allData[selectedDate].employees[emp.id] = {...emp};
+    localStorage.setItem("allData", JSON.stringify(allData));
+    buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase());
   }
 }
 
 // ==========================
-// Table
+// Table & Overtime
 const overtimeSummary = document.getElementById("overtimeSummary");
 filterInput.addEventListener("input", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
 
 function buildEmployeeTable(filterText=""){
   const table=document.getElementById("employeeTable");
-  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th><th>Delete</th></tr>`;
-  if(!allData[selectedDate]) allData[selectedDate]={};
-  teams.forEach(team=>team.employees.forEach(emp=>{
+  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
+  const teams = allData[selectedDate].teams;
+  Object.values(allData[selectedDate].employees).forEach(emp=>{
     if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
-    const row=table.insertRow();
-    row.insertCell(0).textContent=emp.name;
-    row.insertCell(1).textContent=selectedDate;
-    const siteInput=document.createElement("input"); siteInput.value=allData[selectedDate][emp.id]?.site||emp.site;
+    const row = table.insertRow();
+    row.insertCell(0).textContent = emp.name;
+    row.insertCell(1).textContent = selectedDate;
+    const siteInput=document.createElement("input"); siteInput.value=emp.site||"";
     row.insertCell(2).appendChild(siteInput);
-    const inInput=document.createElement("input"); inInput.type="time"; inInput.value=allData[selectedDate][emp.id]?.in||team.siteIn||"";
-    const outInput=document.createElement("input"); outInput.type="time"; outInput.value=allData[selectedDate][emp.id]?.out||team.siteOut||"";
+    const inInput=document.createElement("input"); inInput.type="time"; inInput.value=emp.in||"";
+    const outInput=document.createElement("input"); outInput.type="time"; outInput.value=emp.out||"";
     row.insertCell(3).appendChild(inInput); row.insertCell(4).appendChild(outInput);
     const totalCell=row.insertCell(5); const overtimeCell=row.insertCell(6);
-    const delCell=row.insertCell(7);
-    const delBtn=document.createElement("button"); delBtn.textContent="❌";
-    delBtn.onclick=()=>{ team.employees = team.employees.filter(e=>e.id!==emp.id); buildTeamsContent(); buildEmployeeTable(filterInput.value.trim().toLowerCase()); };
-    delCell.appendChild(delBtn);
+    const [totalH,overtimeH] = calculateHours(inInput,outInput,totalCell,overtimeCell);
 
     function updateAndSave(){
-      const [totalH, overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
-      if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
-      allData[selectedDate][emp.id].in=inInput.value; allData[selectedDate][emp.id].out=outInput.value;
-      allData[selectedDate][emp.id].site=siteInput.value; localStorage.setItem("allData", JSON.stringify(allData));
+      const [totalH,overtimeH]=calculateHours(inInput,outInput,totalCell,overtimeCell);
+      allData[selectedDate].employees[emp.id] = { ...allData[selectedDate].employees[emp.id], site:siteInput.value, in:inInput.value, out:outInput.value };
+      localStorage.setItem("allData", JSON.stringify(allData));
       updateOvertimeSummary();
     }
     inInput.addEventListener("change", updateAndSave);
     outInput.addEventListener("change", updateAndSave);
     siteInput.addEventListener("change", updateAndSave);
-    calculateHours(inInput,outInput,totalCell,overtimeCell);
-  }));
+  });
   updateOvertimeSummary();
 }
 
 function calculateHours(inInput,outInput,totalCell,overtimeCell){
   const inTime=inInput.value, outTime=outInput.value;
-  if(!inTime||!outTime){ 
-    totalCell.textContent="0.00"; 
-    overtimeCell.textContent="0.00"; 
-    totalCell.style.background="lightcoral"; 
-    overtimeCell.style.background="lightcoral"; 
-    return [0,0]; 
-  }
+  if(!inTime||!outTime){ totalCell.textContent="0.00"; overtimeCell.textContent="0.00"; totalCell.style.background="lightcoral"; overtimeCell.style.background="lightcoral"; return [0,0]; }
   totalCell.style.background=""; overtimeCell.style.background="";
   const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
-  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; totalCell.textContent=diff.toFixed(2);
+  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+  totalCell.textContent=diff.toFixed(2);
   const overtime=(diff>9?diff-9:0); overtimeCell.textContent=overtime.toFixed(2);
   return [diff,overtime];
 }
 
+function calculateHoursValue(inTime,outTime){
+  if(!inTime||!outTime) return 0;
+  const [inH,inM]=inTime.split(":").map(Number); const [outH,outM]=outTime.split(":").map(Number);
+  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; return diff;
+}
+
 function updateOvertimeSummary(){
   let totalOT=0; const table=document.getElementById("employeeTable");
-  for(let i=1;i<table.rows.length;i++){ 
-    let val=parseFloat(table.rows[i].cells[6].textContent); 
-    if(!isNaN(val)) totalOT+=val;
-  }
+  for(let i=1;i<table.rows.length;i++){ let val=parseFloat(table.rows[i].cells[6].textContent); if(!isNaN(val)) totalOT+=val; }
   overtimeSummary.textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
 }
 
@@ -357,16 +343,18 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   const toDate=document.getElementById("exportTo").value||selectedDate;
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
   Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
-    teams.forEach(team=>team.employees.forEach(emp=>{
-      const empData=allData[date]?.[emp.id]; if(!empData) return;
-      let total="", overtime="";
-      if(empData.in && empData.out){
-        const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
-        let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2);
-        overtime=(diff>9?diff-9:0);
-      }
-      rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
-    }));
+    const dateData = allData[date];
+    dateData.teams.forEach(team=>{
+      team.employees.forEach(emp=>{
+        const empData = dateData.employees[emp.id]; if(!empData) return;
+        let total="", overtime="";
+        if(empData.in && empData.out){
+          const [inH,inM]=empData.in.split(":").map(Number); const [outH,outM]=empData.out.split(":").map(Number);
+          let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24; total=diff.toFixed(2); overtime=(diff>9?diff-9:0);
+        }
+        rows.push([emp.name,date,empData.site||emp.site,empData.in||"",empData.out||"",total,overtime]);
+      });
+    });
   });
   const blob=new Blob([rows.map(r=>r.join(",")).join("\n")],{type:"text/csv"});
   const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
@@ -375,26 +363,48 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 // ==========================
 // Save Data Button
 document.getElementById("saveBtn").addEventListener("click", ()=>{
-  localStorage.setItem("teams", JSON.stringify(teams));
   localStorage.setItem("allData", JSON.stringify(allData));
   alert("✅ Data saved for "+selectedDate);
 });
 
 // ==========================
-// View Filter Button
-document.getElementById("viewFilterBtn").addEventListener("click", ()=>{ buildEmployeeTable(filterInput.value.trim().toLowerCase()); });
+// View Filter Button (date range)
+document.getElementById("viewFilterBtn").addEventListener("click", ()=>{
+  const fromDate=document.getElementById("exportFrom").value||selectedDate;
+  const toDate=document.getElementById("exportTo").value||selectedDate;
+  const filterText = filterInput.value.trim().toLowerCase();
+  const table = document.getElementById("employeeTable");
+  table.innerHTML=`<tr><th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th></tr>`;
+  Object.keys(allData).sort().filter(d=>d>=fromDate && d<=toDate).forEach(date=>{
+    const dateData = allData[date];
+    dateData.teams.forEach(team=>{
+      team.employees.forEach(emp=>{
+        if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
+        const row = table.insertRow();
+        row.insertCell(0).textContent = emp.name;
+        row.insertCell(1).textContent = date;
+        const empData = dateData.employees[emp.id];
+        row.insertCell(2).textContent = empData.site||"";
+        row.insertCell(3).textContent = empData.in||"";
+        row.insertCell(4).textContent = empData.out||"";
+        const totalHours = calculateHoursValue(empData.in, empData.out);
+        row.insertCell(5).textContent = totalHours.toFixed(2);
+        row.insertCell(6).textContent = Math.max(0,totalHours-9).toFixed(2);
+      });
+    });
+  });
+});
 
 // ==========================
 // Share Team Count
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
-  localStorage.setItem("teams", JSON.stringify(teams));
   localStorage.setItem("allData", JSON.stringify(allData));
   window.open("team_count.html?date="+selectedDate,"_blank");
 });
 
 // ==========================
 // Initialize
-buildTeamsContent(); buildEmployeeTable();
+initDateData(); buildTeamsContent(); buildEmployeeTable();
 </script>
 
 </body>
